Finally fixed the background on mobile

--- a/css/countryCSS.css
+++ b/css/countryCSS.css
@@ -2,19 +2,12 @@
 html,body, ul {
 	margin:0;
 	padding:0;
-	height:100%;
+	height:120%;
 }
 body.khBody{
 	background: url("../assets/countryImages/KH/6.jpg") fixed right top;
 	background-repeat: no-repeat;
-	-webkit-background-size: 100%;
-    -moz-background-size: 100%;
-    -o-background-size: 100%;
-    background-size: 100%;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+	background-size: cover;
 }
 body.plBody{
 	background: url('../assets/countryImages/PL/4.jpg') fixed right top;
